docs(Icomoon): make sure styles don't bleed into other stories

--- a/src/icons/Icomoon/Icomoon.scss
+++ b/src/icons/Icomoon/Icomoon.scss
@@ -1,6 +1,11 @@
 .icon-story-wrapper {
   display: flex;
   flex-wrap: wrap;
+
+  & [class^="fbx-icon-"],
+  & [class*=" fbx-icon-"] {
+    margin-right: 20px;
+  }
 }
 
 .icon-description-wrapper {
@@ -8,8 +13,4 @@
   align-items: center;
   width: 50%;
   padding: 10px;
-}
-
-[class^="fbx-icon-"], [class*=" fbx-icon-"] {
-  margin-right: 20px;
 }
